--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         </div>
                         <div class="info-item">
                             <i class="fas fa-briefcase"></i>
-                            <span>IFSC - Câmpus Lages</span>
+                            <span>IFSC - Campus Lages</span>
                         </div>
                         <div class="info-item">
                             <i class="fab fa-github"></i>
@@ -74,7 +74,7 @@
             <div class="col-md-8 col-sm-10 col-12">
                 <div class="content-section">
                     <h2 class="section-title" id="apresentacao">Apresentação</h2>
-                    <p>Olá! Sou Cayo Gabriel, estudante de Ciência da Computação no IFSC - Câmpus Lages. Sou apaixonado por tecnologia e estou sempre em busca de novos conhecimentos e desafios na área de desenvolvimento.</p>
+                    <p>Olá! Sou Cayo Gabriel, estudante de Ciência da Computação no IFSC - Campus Lages. Sou apaixonado por tecnologia e estou sempre em busca de novos conhecimentos e desafios na área de desenvolvimento.</p>
                     <p>Meu foco atual está em aprofundar meus conhecimentos em programação e explorar diferentes paradigmas e linguagens para construir soluções inovadoras.</p>
 
                     <h2 class="section-title mt-5" id="habilidades">Tecnologias e Habilidades</h2>
