--- a/curriculo.html
+++ b/curriculo.html
@@ -61,7 +61,7 @@
                     <ul class="list-group mb-4">
                         <li class="list-group-item">
                             <strong>Bacharelado em Ciência da Computação</strong><br>
-                            IFSC - Câmpus Lages | 2025 - Atualmente
+                            IFSC - Campus Lages | 2025 - Atualmente
                             <p class="mb-0 mt-1">Disciplinas Relevantes: Estrutura de Dados, Algoritmos, Programação Orientada a Objetos, Bancos de Dados.</p>
                         </li>
                     </ul>
