--- a/portfolio.html
+++ b/portfolio.html
@@ -47,29 +47,19 @@
 
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
-                    <div class="card h-100 portfolio-item">
-                        <img src="https://via.placeholder.com/400x250?text=Projeto+Java+em+Construção" class="card-img-top" alt="Imagem ilustrativa de projeto Java">
-                        <div class="card-body">
-                            <h5 class="card-title">Projeto: Sistema de Gestão Simples (Java)</h5>
-                            <p class="card-text">Um sistema em Java para gerenciar informações básicas (ex: estoque, clientes, contatos). Foco em Programação Orientada a Objetos e estruturas de dados. Este projeto será a base para explorar conceitos de persistência de dados.</p>
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-muted">Tecnologias Foco: Java, POO, Estrutura de Dados</small><br>
-                            <a href="https://github.com/k7sxgg?tab=repositories" target="_blank" class="btn btn-sm btn-outline-secondary mt-2">Acompanhe no GitHub <i class="fab fa-github ms-1"></i></a>
-                        </div>
                     </div>
                 </div>
 
                 <div class="col">
                     <div class="card h-100 portfolio-item">
-                        <img src="https://via.placeholder.com/400x250?text=Projeto+Web+em+Andamento" class="card-img-top" alt="Imagem ilustrativa de página web responsiva">
+                        <img src="ProjetoSitePessoal.jpg" class="card-img-top" alt="Imagem ilustrativa de página web responsiva">
                         <div class="card-body">
-                            <h5 class="card-title">Projeto: Landing Page Interativa (HTML/CSS)</h5>
-                            <p class="card-text">Criação de uma landing page moderna e responsiva para um produto ou serviço fictício. O objetivo é aprofundar conhecimentos em design web, CSS Grid/Flexbox e usabilidade em diferentes dispositivos.</p>
+                            <h5 class="card-title">Projeto: Site Pessoal (HTML/CSS)</h5>
+                            <p class="card-text">Criação de uma pagina pessoal responsiva para um Trabalho da faculdade. O objetivo é aprofundar conhecimentos em design web, CSS Grid/Flexbox e usabilidade em diferentes dispositivos.</p>
                         </div>
                         <div class="card-footer">
                             <small class="text-muted">Tecnologias Foco: HTML5, CSS3, Responsividade</small><br>
-                            <a href="https://github.com/k7sxgg?tab=repositories" target="_blank" class="btn btn-sm btn-outline-secondary mt-2">Acompanhe no GitHub <i class="fab fa-github ms-1"></i></a>
+                            <a href="https://github.com/k7sxgg/meu-site-pessoal-cayo" target="_blank" class="btn btn-sm btn-outline-secondary mt-2">Acompanhe no GitHub <i class="fab fa-github ms-1"></i></a>
                         </div>
                     </div>
                 </div>
