--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="fiveicon/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -15,9 +16,10 @@
 <body>
     <header class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand d-flex align-items-center" href="https://www.instagram.com/souocayo/"
-                target="_blank">
-                <i class="fab fa-instagram fa-lg me-2"></i> Cayo Gabriel M.
+            <a class="navbar-brand d-flex align-items-center" href="index.html">
+                <i class="bi bi-rocket-takeoff fs-4 me-2"></i>
+                Cayo Gabriel M.
+            </a>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
