--- a/index.html
+++ b/index.html
@@ -48,14 +48,23 @@
                     <div class="profile-image-container">
                         <img src="Perfil.png" alt="Foto de Perfil de Cayo Gabriel M." class="profile-image">
                     </div>
-                    <div class="buttons">
-                        <a href="#" class="button web-dev"><i class="fas fa-code"></i> Estudante</a>
-                        <a href="#" class="button game-dev"><i class="fas fa-graduation-cap"></i> Graduando Ciência da Computação</a>
+                    <div class="buttons w-100">
+                        <a href="#" class="button web-dev mw-100">
+                            <div class="m-auto text-truncate">
+                                <i class="fas fa-code"></i> <span>Estudante</span>
+                            </div>
+                        </a>
+                        <a href="#" class="button game-dev mw-100">
+                            <div class="m-auto text-truncate">
+                                <i class="fas fa-graduation-cap"></i> 
+                                <span>Ciência da Computação</span>
+                            </div>
+                        </a>
                     </div>
                     <div class="contact-info" id="contato">
                         <div class="info-item">
                             <i class="fas fa-envelope"></i>
-                            <span>cayogabrielm@gmail.com</span>
+                            <span class="text-truncate">cayogabrielm@gmail.com</span>
                         </div>
                         <div class="info-item">
                             <i class="fas fa-map-marker-alt"></i>
