--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@
                             <i class="fas fa-envelope"></i>
                             <span class="text-truncate">cayogabrielm@gmail.com</span>
                         </div>
-                        <div class="info-item">
+                        <div class="info-item text-truncate">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>Lages/SC - Brasil</span>
+                            <span class="text-truncate">Lages/SC - Brasil</span>
                         </div>
-                        <div class="info-item">
+                        <div class="info-item text-truncate">
                             <i class="fas fa-briefcase"></i>
-                            <span>IFSC - Campus Lages</span>
+                            <span class="text-truncate">IFSC - Campus Lages</span>
                         </div>
-                        <div class="info-item">
+                        <div class="info-item text-truncate">
                             <i class="fab fa-github"></i>
-                            <a href="https://github.com/k7sxgg" target="_blank">github.com/k7sxgg</a>
+                            <a class="text-truncate" href="https://github.com/k7sxgg" target="_blank">github.com/k7sxgg</a>
                         </div>
                     </div>
                 </div>
