--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
                         <img src="ProjetoSitePessoal.jpg" class="card-img-top" alt="Imagem ilustrativa de página web responsiva">
                         <div class="card-body">
                             <h5 class="card-title">Projeto: Site Pessoal (HTML/CSS)</h5>
-                            <p class="card-text">Criação de uma pagina pessoal responsiva para um Trabalho da faculdade. O objetivo é aprofundar conhecimentos em design web, CSS Grid/Flexbox e usabilidade em diferentes dispositivos.</p>
+                            <p class="card-text">Criação de uma pagina pessoal responsiva, para um Trabalho da faculdade. O objetivo é aprofundar conhecimentos em design web, CSS Grid/Flexbox e usabilidade em diferentes dispositivos.</p>
                         </div>
                         <div class="card-footer">
                             <small class="text-muted">Tecnologias Foco: HTML5, CSS3, Responsividade</small><br>
