--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="portfolio.html">Portfólio</a>
-                    </li> 
+                    </li>
                 </ul>
             </div>
         </div>
@@ -56,7 +56,7 @@
                         </a>
                         <a href="#" class="button game-dev mw-100">
                             <div class="m-auto text-truncate">
-                                <i class="fas fa-graduation-cap"></i> 
+                                <i class="fas fa-graduation-cap"></i>
                                 <span>Ciência da Computação</span>
                             </div>
                         </a>
@@ -76,7 +76,8 @@
                         </div>
                         <div class="info-item text-truncate">
                             <i class="fab fa-github"></i>
-                            <a class="text-truncate" href="https://github.com/k7sxgg" target="_blank">github.com/k7sxgg</a>
+                            <a class="text-truncate" href="https://github.com/k7sxgg"
+                                target="_blank">github.com/k7sxgg</a>
                         </div>
                     </div>
                 </div>
@@ -85,13 +86,17 @@
             <div class="col-md-8 col-sm-10 col-12">
                 <div class="content-section">
                     <h2 class="section-title" id="apresentacao">Apresentação</h2>
-                    <p>Olá! Sou Cayo Gabriel, estudante de Ciência da Computação no IFSC - Campus Lages. Sou apaixonado por tecnologia e estou sempre em busca de novos conhecimentos e desafios na área de desenvolvimento.</p>
-                    <p>Meu foco atual está em aprofundar meus conhecimentos em programação e explorar diferentes paradigmas e linguagens para construir soluções inovadoras.</p>
+                    <p>Olá! Sou Cayo Gabriel, estudante de Ciência da Computação no IFSC - Campus Lages. Sou apaixonado
+                        por tecnologia e estou sempre em busca de novos conhecimentos e desafios na área de
+                        desenvolvimento.</p>
+                    <p>Meu foco atual está em aprofundar meus conhecimentos em programação e explorar diferentes
+                        paradigmas e linguagens para construir soluções inovadoras.</p>
 
                     <h2 class="section-title mt-5" id="habilidades">Tecnologias e Habilidades</h2>
                     <ul class="list-group">
                         <li class="list-group-item d-flex align-items-center">
-                            <i class="fab fa-java fa-lg me-3 text-primary"></i> <span>Java - Desenvolvimento Backend</span>
+                            <i class="fab fa-java fa-lg me-3 text-primary"></i> <span>Java - Desenvolvimento
+                                Backend</span>
                         </li>
                         <li class="list-group-item d-flex align-items-center">
                             <i class="fab fa-html5 fa-lg me-3 text-danger"></i>
@@ -110,14 +115,18 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    
+
     <footer class="bg-dark text-white text-center py-3 mt-5">
-        <div class="container"> <p class="mb-2">&copy; 2025 Cayo Gabriel M. Todos os direitos reservados.</p>
+        <div class="container">
+            <p class="mb-2"> Copyright &copy; 2025 Cayo Gabriel M.</p>Todos os direitos reservados.</p>
             <div>
-                <a href="https://www.instagram.com/souocayo/" target="_blank" class="text-white mx-2"><i class="fab fa-instagram fa-lg"></i></a>
-                <a href="https://github.com/k7sxgg" target="_blank" class="text-white mx-2"><i class="fab fa-github fa-lg"></i></a>
-                </div>
+                <a href="https://www.instagram.com/souocayo/" target="_blank" class="text-white mx-2"><i
+                        class="fab fa-instagram fa-lg"></i></a>
+                <a href="https://github.com/k7sxgg" target="_blank" class="text-white mx-2"><i
+                        class="fab fa-github fa-lg"></i></a>
+            </div>
         </div>
     </footer>
 </body>
+
 </html>
