--- a/curriculo.html
+++ b/curriculo.html
@@ -50,19 +50,26 @@
                         <li class="list-group-item"><i class="fas fa-envelope me-2"></i> cayogabrielm@gmail.com</li>
                         <li class="list-group-item"><i class="fas fa-phone me-2"></i> (74) 99154-1494</li>
                         <li class="list-group-item"><i class="fas fa-map-marker-alt me-2"></i> Lages/SC - Brasil</li>
-                        <li class="list-group-item"><i class="fab fa-github me-2"></i> <a href="https://github.com/k7sxgg" target="_blank">github.com</a></li>
-                        <li class="list-group-item"><i class="fab fa-linkedin me-2"></i> <a href="https://www.linkedin.com/in/cayo-gabriel-martins-de-souza-925a78280/" target="_blank">linkedin.com</a></li>
+                        <li class="list-group-item"><i class="fab fa-github me-2"></i> <a
+                                href="https://github.com/k7sxgg" target="_blank">github.com</a></li>
+                        <li class="list-group-item"><i class="fab fa-linkedin me-2"></i> <a
+                                href="https://www.linkedin.com/in/cayo-gabriel-martins-de-souza-925a78280/"
+                                target="_blank">linkedin.com</a></li>
                     </ul>
 
                     <h3 class="mt-4">Resumo</h3>
-                    <p>Estudante de Ciência da Computação com interesse em desenvolvimento de software, buscando oportunidades para aplicar e expandir conhecimentos em ambientes desafiadores. Possuo base sólida em lógica de programação e em linguagens como Java, com foco em desenvolvimento de backend e interfaces web.</p>
+                    <p>Estudante de Ciência da Computação com interesse em desenvolvimento de software, buscando
+                        oportunidades para aplicar e expandir conhecimentos em ambientes desafiadores. Possuo base
+                        sólida em lógica de programação e em linguagens como Java, com foco em desenvolvimento de
+                        backend e interfaces web.</p>
 
                     <h3 class="mt-4">Educação</h3>
                     <ul class="list-group mb-4">
                         <li class="list-group-item">
                             <strong>Bacharelado em Ciência da Computação</strong><br>
                             IFSC - Campus Lages | 2025 - Atualmente
-                            <p class="mb-0 mt-1">Disciplinas Relevantes: Estrutura de Dados, Algoritmos, Programação Orientada a Objetos, Bancos de Dados.</p>
+                            <p class="mb-0 mt-1">Disciplinas Relevantes: Estrutura de Dados, Algoritmos, Programação
+                                Orientada a Objetos, Bancos de Dados.</p>
                         </li>
                     </ul>
 
@@ -72,26 +79,31 @@
                             <strong>No momento, não possuo experiência profissional formal.</strong><br>
                             Minha dedicação está focada em adquirir conhecimentos teóricos e práticos através de:
                             <ul>
-                                <li>**Projetos Acadêmicos:** Aplicação de conceitos de programação e engenharia de software em desafios práticos.</li>
-                                <li>**Projetos Pessoais:** Desenvolvimento independente de aplicações para aprimorar habilidades e explorar novas tecnologias (ver meu <a href="portfolio.html">Portfólio</a> para exemplos).</li>
-                                <li>**Cursos e Certificações:** Aprofundamento contínuo em áreas como desenvolvimento backend com Java e tecnologias web.</li>
-                                <li>**Participação em Comunidades:** Engajamento em grupos de estudo e eventos da área de TI.</li>
+                                <li>**Projetos Acadêmicos:** Aplicação de conceitos de programação e engenharia de
+                                    software em desafios práticos.</li>
+                                <li>**Projetos Pessoais:** Desenvolvimento independente de aplicações para aprimorar
+                                    habilidades e explorar novas tecnologias (ver meu <a
+                                        href="portfolio.html">Portfólio</a> para exemplos).</li>
+                                <li>**Cursos e Certificações:** Aprofundamento contínuo em áreas como desenvolvimento
+                                    backend com Java e tecnologias web.</li>
+                                <li>**Participação em Comunidades:** Engajamento em grupos de estudo e eventos da área
+                                    de TI.</li>
                             </ul>
                         </li>
-                        </ul>
+                    </ul>
 
                     <h3 class="mt-4">Habilidades Técnicas</h3>
                     <ul class="list-group mb-4">
                         <li class="list-group-item"><strong>Linguagens de Programação:</strong> Java, HTML5, CSS3</li>
                         <li class="list-group-item"><strong>Ferramentas e Outros:</strong> Git, GitHub, VS Code</li>
-                        </ul>
+                    </ul>
 
                     <h3 class="mt-4">Projetos Acadêmicos/Pessoais</h3>
                     <ul class="list-group mb-4">
                         <li class="list-group-item">
                             <strong>Sem Projetos</strong>
                         </li>
-                        </ul>
+                    </ul>
 
                     <h3 class="mt-4">Idiomas</h3>
                     <ul class="list-group mb-4">
@@ -109,12 +121,15 @@
 
     <footer class="bg-dark text-white text-center py-3 mt-5">
         <div class="container">
-            <p class="mb-2">&copy; 2025 Cayo Gabriel M. Todos os direitos reservados.</p>
+            <p class="mb-2"> Copyright &copy; 2025 Cayo Gabriel M.</p>Todos os direitos reservados.</p>
             <div>
-                <a href="https://www.instagram.com/souocayo/" target="_blank" class="text-white mx-2"><i class="fab fa-instagram fa-lg"></i></a>
-                <a href="https://github.com/k7sxgg" target="_blank" class="text-white mx-2"><i class="fab fa-github fa-lg"></i></a>
+                <a href="https://www.instagram.com/souocayo/" target="_blank" class="text-white mx-2"><i
+                        class="fab fa-instagram fa-lg"></i></a>
+                <a href="https://github.com/k7sxgg" target="_blank" class="text-white mx-2"><i
+                        class="fab fa-github fa-lg"></i></a>
             </div>
         </div>
     </footer>
 </body>
+
 </html>
