--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="portfolio.html">Portfólio</a>
                     </li>
-                    </ul>
+                </ul>
             </div>
         </div>
     </header>
@@ -43,39 +43,48 @@
         <div class="content-section">
             <h1 class="section-title text-center mb-4">Meus Projetos</h1>
 
-            <p class="lead text-center mb-5">Como estudante de Ciência da Computação, estou ativamente construindo meu portfólio de projetos para aplicar e aprofundar meus conhecimentos práticos. Abaixo, você encontrará algumas das minhas áreas de interesse e projetos que estou desenvolvendo ou planejando iniciar.</p>
+            <p class="lead text-center mb-5">Como estudante de Ciência da Computação, estou ativamente construindo meu
+                portfólio de projetos para aplicar e aprofundar meus conhecimentos práticos. Abaixo, você encontrará
+                algumas das minhas áreas de interesse e projetos que estou desenvolvendo ou planejando iniciar.</p>
 
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
-                    </div>
                 </div>
+            </div>
 
-                <div class="col">
-                    <div class="card h-100 portfolio-item">
-                        <img src="ProjetoSitePessoal.jpg" class="card-img-top" alt="Imagem ilustrativa de página web responsiva">
-                        <div class="card-body">
-                            <h5 class="card-title">Projeto: Site Pessoal (HTML/CSS)</h5>
-                            <p class="card-text">Criação de uma pagina pessoal responsiva, para um Trabalho da faculdade. O objetivo é aprofundar conhecimentos em design web, CSS Grid/Flexbox e usabilidade em diferentes dispositivos.</p>
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-muted">Tecnologias Foco: HTML5, CSS3, Responsividade</small><br>
-                            <a href="https://github.com/k7sxgg/meu-site-pessoal-cayo" target="_blank" class="btn btn-sm btn-outline-secondary mt-2">Acompanhe no GitHub <i class="fab fa-github ms-1"></i></a>
-                        </div>
+            <div class="col">
+                <div class="card h-100 portfolio-item">
+                    <img src="ProjetoSitePessoal.jpg" class="card-img-top"
+                        alt="Imagem ilustrativa de página web responsiva">
+                    <div class="card-body">
+                        <h5 class="card-title">Projeto: Site Pessoal (HTML/CSS)</h5>
+                        <p class="card-text">Criação de uma pagina pessoal responsiva, para um Trabalho da faculdade. O
+                            objetivo é aprofundar conhecimentos em design web, CSS Grid/Flexbox e usabilidade em
+                            diferentes dispositivos.</p>
                     </div>
-                </div>
-
-                
+                    <div class="card-footer">
+                        <small class="text-muted">Tecnologias Foco: HTML5, CSS3, Responsividade</small><br>
+                        <a href="https://github.com/k7sxgg/meu-site-pessoal-cayo" target="_blank"
+                            class="btn btn-sm btn-outline-secondary mt-2">Acompanhe no GitHub <i
+                                class="fab fa-github ms-1"></i></a>
                     </div>
                 </div>
             </div>
 
-            <div class="text-center mt-5 p-4 bg-light border rounded">
-                <h3 class="section-title-small">Interessado em ver meu progresso?</h3>
-                <p>Estou constantemente aprendendo e aplicando novos conhecimentos. Você pode acompanhar o desenvolvimento desses e de futuros projetos diretamente no meu perfil do GitHub!</p>
-                <a href="https://github.com/k7sxgg" target="_blank" class="btn btn-primary btn-lg"><i class="fab fa-github me-2"></i> Visitar meu GitHub</a>
-            </div>
 
         </div>
+    </div>
+    </div>
+
+    <div class="text-center mt-5 p-4 bg-light border rounded">
+        <h3 class="section-title-small">Interessado em ver meu progresso?</h3>
+        <p>Estou constantemente aprendendo e aplicando novos conhecimentos. Você pode acompanhar o desenvolvimento
+            desses e de futuros projetos diretamente no meu perfil do GitHub!</p>
+        <a href="https://github.com/k7sxgg" target="_blank" class="btn btn-primary btn-lg"><i
+                class="fab fa-github me-2"></i> Visitar meu GitHub</a>
+    </div>
+
+    </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -86,10 +95,13 @@
         <div class="container">
             <p class="mb-2">&copy; 2025 Cayo Gabriel M. Todos os direitos reservados.</p>
             <div>
-                <a href="https://www.instagram.com/souocayo/" target="_blank" class="text-white mx-2"><i class="fab fa-instagram fa-lg"></i></a>
-                <a href="https://github.com/k7sxgg" target="_blank" class="text-white mx-2"><i class="fab fa-github fa-lg"></i></a>
+                <a href="https://www.instagram.com/souocayo/" target="_blank" class="text-white mx-2"><i
+                        class="fab fa-instagram fa-lg"></i></a>
+                <a href="https://github.com/k7sxgg" target="_blank" class="text-white mx-2"><i
+                        class="fab fa-github fa-lg"></i></a>
             </div>
         </div>
     </footer>
 </body>
+
 </html>
