--- a/portfolio.html
+++ b/portfolio.html
@@ -93,7 +93,7 @@
 
     <footer class="bg-dark text-white text-center py-3 mt-5">
         <div class="container">
-            <p class="mb-2">&copy; 2025 Cayo Gabriel M. Todos os direitos reservados.</p>
+            <p class="mb-2"> Copyright &copy; 2025 Cayo Gabriel M.</p>Todos os direitos reservados.</p>
             <div>
                 <a href="https://www.instagram.com/souocayo/" target="_blank" class="text-white mx-2"><i
                         class="fab fa-instagram fa-lg"></i></a>
