--- a/.github/workflows/index.html
+++ b/.github/workflows/index.html
@@ -46,7 +46,7 @@
             <div class="col-md-4 col-sm-10 col-12 mb-4">
                 <div class="profile-card">
                     <div class="profile-image-container">
-                        <img src="Perfil.png" alt="Foto de Perfil de Cayo Gabriel M." class="profile-image">
+                        <img src="Fotos/Perfil.png" alt="Foto de Perfil de Cayo Gabriel M." class="profile-image">
                     </div>
                     <div class="buttons w-100">
                         <a href="#" class="button web-dev mw-100">
