--- a/.github/workflows/curriculo.html
+++ b/.github/workflows/curriculo.html
@@ -108,7 +108,7 @@
                     <h3 class="mt-4">Idiomas</h3>
                     <ul class="list-group mb-4">
                         <li class="list-group-item">Português: Nativo</li>
-                        <li class="list-group-item">Inglês: Iniciante</li>
+                        <li class="list-group-item">Inglês: Básico</li>
                     </ul>
                 </div>
             </div>
