--- a/.github/workflows/portfolio.html
+++ b/.github/workflows/portfolio.html
@@ -54,8 +54,7 @@
 
             <div class="col">
                 <div class="card h-100 portfolio-item">
-                    <img src="ProjetoSitePessoal.jpg" class="card-img-top"
-                        alt="Imagem ilustrativa de página web responsiva">
+                    <img src="Fotos/ProjetoSitePessoal.jpg" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Projeto: Site Pessoal (HTML/CSS)</h5>
                         <p class="card-text">Criação de uma pagina pessoal responsiva, para um Trabalho da faculdade. O
